--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             height: 100vh;
             min-height: 600px;
             background: linear-gradient(rgba(0, 51, 102, 0.7), rgba(0, 51, 102, 0.7)),
-                        <!doctype html>
-                        <html lang="en">
-                          <head>
+                        url('https://images.unsplash.com/photo-1523050854058-8df901130c9f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
+            display: flex;
+            align-items: center;
             text-align: center;
             color: var(--white);
         }
